@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.22
-Date: 2015-03-19
+Version: 0.6.23
+Date: 2015-04-04
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
